@@ -2,6 +2,12 @@
 
 =over 2
 
+=item * B<3.000006> (2012-07-27)
+
+Fixing construction mode of parse_file to really behave as if accept_unknown had been specified (incomplete conditional). This fixes construction from files without full meta data.
+
+Also, documentation got further refinement.
+
 =item * B<3.000005> (2012-07-21)
 
 =over 2
